// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusField renders if not update submissions and not cataloger 1`] = `
<WithFormItem(SelectField)
  disabled={true}
  labelCol={
    Object {
      "span": 5,
    }
  }
  options={
    Array [
      Object {
        "value": "open",
      },
      Object {
        "value": "closed",
      },
    ]
  }
  wrapperCol={
    Object {
      "span": 19,
    }
  }
/>
`;

exports[`StatusField renders if not update submissions but cataloger 1`] = `
<WithFormItem(SelectField)
  disabled={false}
  labelCol={
    Object {
      "span": 5,
    }
  }
  options={
    Array [
      Object {
        "value": "pending",
      },
      Object {
        "value": "open",
      },
      Object {
        "value": "closed",
      },
    ]
  }
  wrapperCol={
    Object {
      "span": 19,
    }
  }
/>
`;

exports[`StatusField renders if update submissions and cataloger 1`] = `
<WithFormItem(SelectField)
  disabled={false}
  labelCol={
    Object {
      "span": 5,
    }
  }
  options={
    Array [
      Object {
        "value": "pending",
      },
      Object {
        "value": "open",
      },
      Object {
        "value": "closed",
      },
    ]
  }
  wrapperCol={
    Object {
      "span": 19,
    }
  }
/>
`;

exports[`StatusField renders if update submissions but not cataloger 1`] = `
<WithFormItem(SelectField)
  disabled={false}
  labelCol={
    Object {
      "span": 5,
    }
  }
  options={
    Array [
      Object {
        "value": "open",
      },
      Object {
        "value": "closed",
      },
    ]
  }
  wrapperCol={
    Object {
      "span": 19,
    }
  }
/>
`;
